--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,13 +1,2 @@
+<app-loading *ngIf="loading"></app-loading>
 <app-tarjetas [items]="nuevasCanciones"></app-tarjetas>
-
-
-
-
-
-
-
-<!--<ul>
-    <li *ngFor="let pais of paises">
-        {{ pais.name}} {{pais.population | number}}
-    </li>
-</ul>-->
