--- a/src/app/components/artista/artista.component.html
+++ b/src/app/components/artista/artista.component.html
@@ -14,6 +14,35 @@
         <button routerLink="/search" class="btn btn-outline-danger">
             Regresar
         </button>
+    </div>
+</div>
 
+<div class="row m-5">
+    <div class="col">
+
+        <table class="table">
+
+            <tr>
+                <th> Foto </th>
+                <th> Albúm </th>
+                <th> Canción </th>
+                <th> Vista previa </th>
+            </tr>
+
+
+            <tbody>
+                <tr *ngFor="let track of topTracks">
+                    <td>
+                        <img [src]="track.album.images | noimage" alt="" class="img-thumb">
+                    </td>
+                    <td>{{ track.album.name }}</td>
+                    <td>{{ track.name }}</td>
+                    <td>
+                        <!--     <audio [src]="track.preview_url" controls></audio> -->
+                        <iframe [src]="track.id | domseguro" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
